@@ -4,6 +4,7 @@ xterm (287-1) UNRELEASED; urgency=low
   * Drop upstream patches.
   * Refresh remaining patches.
   * Explicitly set --with-desktop-category avoid desktop-file-install failure.
+  * Enable backarrowKeyIsErase in configure instead of 900_debian_xterm.diff.
 
  -- Julien Cristau <jcristau@debian.org>  Tue, 27 Nov 2012 20:22:09 +0100
 
